refactor(sql): keep query step builders internal
Return complete query steps from connector CTE compilation instead of
exposing mutable builders across method boundaries. Let concept and date
aggregation stages own their CTE metadata and predecessor relationships,
and keep individual connector stages package-private.

Co-authored-by: Codex GPT-5.6-sol <codex@openai.com>